First-draft layout with grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <div class="header">
+            <h1>Library</h1>
+        </div>
 
+        <div class="library-container">
+            <div class="action-panel"></div>
+            <div class="library-grid"></div>
+        </div>
+
+        <div class="footer">josephdanielm</div>
+    </div>
 </body>
 
 </html>
