--- a/index.html
+++ b/index.html
@@ -17,9 +17,51 @@
 
         <div class="library-container">
             <div class="action-panel"></div>
-            <div class="library-grid"></div>
-        </div>
+            <div class="library-grid">
+                <div class="card">
+                    <h1>title</h1>
+                    <h2>author</h2>
+                    <p>pages</p>
+                    <span class="card-actions">
+                        <div class="switch-container">
+                            <label class="read-switch"><input class="read-input" type="checkbox" />
+                                <div></div>
+                            </label>
+                        </div>
+                        <img class="delete-button" src="./assets/delete.svg">
+                    </span>
+                </div>
 
+                <div class="card">
+                    <h1>title</h1>
+                    <h2>author</h2>
+                    <p>pages</p>
+                    <span class="card-actions">
+                        <div class="switch-container">
+                            <label class="read-switch"><input class="read-input" type="checkbox" />
+                                <div></div>
+                            </label>
+                        </div>
+                        <img class="delete-button" src="./assets/delete.svg">
+                    </span>
+                </div>
+
+                <div class="card">
+                    <h1>title</h1>
+                    <h2>author</h2>
+                    <p>pages</p>
+                    <span class="card-actions">
+                        <div class="switch-container">
+                            <label class="read-switch"><input class="read-input" type="checkbox" />
+                                <div></div>
+                            </label>
+                        </div>
+                        <img class="delete-button" src="./assets/delete.svg">
+                    </span>
+                </div>
+
+            </div>
+        </div>
         <div class="footer">josephdanielm</div>
     </div>
 </body>
