--- a/index.html
+++ b/index.html
@@ -16,7 +16,29 @@
         </div>
 
         <div class="library-container">
-            <div class="action-panel"></div>
+            <div class="action-panel">
+                <div class="form-container">
+                    <form method="get">
+                        <label for="book-title">Title:</label>
+                        <input type="text" name="book-title" id="book-title">
+                        <br>
+                        <label for="book-author">Author:</label>
+                        <input type="text" name="book-author" id="book-author">
+                        <br>
+                        <label for="book-pages">Pages:</label>
+                        <input type="number" name="book-pages" id="book-pages">
+                        <br>
+                        <label>Have you read this book?</label>
+                        <br>
+                        <input type="radio" name="book-read" id="book-read-yes" value="true">
+                        <label for="book-read-yes">Yes</label><br>
+                        <input type="radio" name="book-read" id="book-read-no" value="false">
+                        <label for="book-read-no">No</label>
+                        <br>
+                        <button type="submit" value="submit">Add Book</button>
+                    </form>
+                </div>
+            </div>
             <div class="library-grid">
                 <div class="card">
                     <h1>title</h1>
