Add logo and card-read-styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="header">
+            <img class="logo" src="./assets/jm.svg" alt="">
             <h1>Library</h1>
         </div>
 
