Add media queries and some final styles

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="./assets/icon.png">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
     <meta charset="UTF-8">
@@ -54,10 +55,11 @@
                         <img class="delete-button" src="./assets/delete.svg">
                     </span>
                 </div>
-
             </div>
         </div>
-        <div class="footer">josephdanielm</div>
+        <div class="footer">josephdanielm |<a href="https://github.com/josephdanielm" target="_blank"><img
+                    class="github-logo" src="./assets/github.svg"></a>
+        </div>
     </div>
 </body>
 
