--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <div class="form-container">
                     <form method="get">
                         <label class="input-label" for="book-title">Title</label>
-                        <input type="text" name="book-title" id="book-title" required>
+                        <input type="text" name="book-title" id="book-title" minlength="1" maxlength="60" required>
                         <label class="input-label" for="book-author">Author</label>
                         <input type="text" name="book-author" id="book-author" required>
                         <label class="input-label" for="book-pages">Pages</label>
-                        <input type="number" name="book-pages" id="book-pages" required>
+                        <input type="number" name="book-pages" id="book-pages" min="1" max="2000" minlength="1" maxlength="4" required>
                         <label>Have you read this book?</label>
                         <span class="radio-span">
                             <input type="radio" name="book-read" id="book-read-yes" value="true" required>
