Add a page counter!

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <button type="submit" value="submit">Add Book</button>
                     </form>
                 </div>
+                <div class="page-counter">Total Pages Read: <span id="page-counter-number">0</span></div>
             </div>
             <div class="library-grid">
                 <div class="card">
